--- a/CarApplication/Views/Cars/Index.cshtml
+++ b/CarApplication/Views/Cars/Index.cshtml
@@ -9,6 +9,10 @@
     int rowNumber = 1;
 }
 
+<div>
+    <a asp-action="create" asp-controller="cars" class="btn btn-primary">Create</a>
+</div>
+
 <form method="post">
     <table class="table table-hover">
         <thead>
