--- a/CarApplication/Views/Cars/CreateUpdate.cshtml
+++ b/CarApplication/Views/Cars/CreateUpdate.cshtml
@@ -42,6 +42,18 @@ else
                 <input asp-for="CarPrice" class="form-control" />
             </div>
         </div>
+        <div class="form-group row">
+            <label asp-for="CreatedAt" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <input asp-for="CreatedAt" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="UpdatedAt" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <input asp-for="UpdatedAt" class="form-control" />
+            </div>
+        </div>
 
         <hr />
 
