--- a/CarApplication/Views/Cars/CreateUpdate.cshtml
+++ b/CarApplication/Views/Cars/CreateUpdate.cshtml
@@ -10,6 +10,8 @@ else
 }
 
 <div>
+    <h4>Car</h4>
+    <hr />
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" />
         <div class="form-group row">
