--- a/CarApplication/Views/Home/Index.cshtml
+++ b/CarApplication/Views/Home/Index.cshtml
@@ -2,7 +2,30 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        body {
+            background-image: url('/images/cars.jpg'); /* Adjust the path based on your project structure */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+        .text-center {
+            color: black; /* Set the text color to make it readable on the background */
+            background-color: rgba(255, 255, 255, 0.5); /* 50% transparent white */
+            padding: 20px;
+            border-radius: 30px;
+        }
+    </style>
+</head>
+<body>
+    <div class="text-center">
+
+        <h1 class="display-4">Welcome to our car shop!</h1></a>
+
+        <p>Explore our curated collection of quality products, where style meets functionality. From trendy fashion to essential accessories, we have something for everyone. Enjoy a seamless shopping experience with us!</a>.</p>
+    </div>
+</body>
+</html>
