--- a/CarApplication/Views/Home/Privacy.cshtml
+++ b/CarApplication/Views/Home/Privacy.cshtml
@@ -1,6 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+<style>
+    h1 {
+        color: #000; 
+    }
+</style>
+
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        body {
+            background-image: url('/images/car.webp'); /* Adjust the path based on your project structure */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+    </style>
+</head>
+<body style="color: black;">
+    <p>Use this page to detail your site's privacy policy.</p>
+</body>
+</html>
