--- a/CarApplication/Views/Cars/Delete.cshtml
+++ b/CarApplication/Views/Cars/Delete.cshtml
@@ -1,11 +1,25 @@
 ﻿@model CarApplication.Models.Car.CarDeleteViewModel
 
+<style>
+    html, body {
+        background-image: url('/images/winter.jpg');
+        background-size: cover;
+    }
+
+    .semi-transparent-bg {
+        background-color: rgba(255, 255, 255, 0.75);
+        padding: 10px;
+        border-radius: 10px;
+    }
+</style>
+
 <h1>Delete</h1>
 
 <div>
     <h4>Car</h4>
     <hr />
     <dl class="row">
+        <div class="semi-transparent-bg">
         <div class="form-group row">
             <label asp-for="Id" class="col-sm-2 col-form-label"></label>
             @Html.DisplayFor(model => Model.Id)
@@ -44,6 +58,7 @@
         <div class="form-group row">
             <label asp-for="UpdatedAt" class="col-sm-2 col-form-label"></label>
             @Html.DisplayFor(model => Model.UpdatedAt)
+        </div>
         </div>
     </dl>
     <hr />
