--- a/CarApplication/Views/Shared/_Layout.cshtml
+++ b/CarApplication/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="Cars" asp-action="Index">Car</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Cars" asp-action="Index">Car</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-white bg-dark">
         <div class="container">
             &copy; @DateTime.Now.Year - CarApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
