Full project is done + Azure connected

--- a/CarApplication/Views/Cars/Index.cshtml
+++ b/CarApplication/Views/Cars/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CarApplication.Models.Car.CarIndexViewModel>
+﻿//CARAPP IS DONE
+@model IEnumerable<CarApplication.Models.Car.CarIndexViewModel>
 
 <style>
     html, body {
